--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.27.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
