--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.27.0",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-card-flip": "^1.1.5",
